Wordsmithery and Styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
 
 
-    <title>Eugene Codes - (something whitty)</title>
+    <title>Eugene Codes - Conscious Coding Done Right</title>
 </head>
 <body>
     <!-- Remember to wrap it up -->
@@ -116,11 +116,11 @@
                     
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
                        <h3 class="ts-title">Coding done right!</h3>
-                        <p>After creating and refining multiple webpages for his favorite game <a href="http://www.starcraft.com/">Starcraft</a> during his teenage years, Eugene realized he had a natural talent for designing and creating webpages. After years of following other passions and learning about himself Eugene returned to web design to follow his true passion  of sparking peoples intrests and intimately connecting with them.</p>
+                        <p>Through creating and refining multiple webpages for his favorite game, <a href="http://www.starcraft.com/" target="_blank">Starcraft</a>, during his teenage years, Eugene realized he had a natural talent for designing and creating webpages. After years of following other pursuits and learning about himself, Eugene returned to his true passion of sparking people’s interests while intimately connecting with them through web development and design.</p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
                        <h3 class="ts-title">Coding that connects!</h3>
-                        <p>Life is about connection and Eugene excels in creating dynamic, responsive websites that connect clients with the wants and needs of their customer base. Through his use of Wordsmithery, HTML5, CSS, Javascript, JQuery, AJAX, and PHP Eugene can make your design wants and needs a reality. Eugene believes that anything worth doing is worth doing right and that designs should be effective, innovative, and sleek.</p>
+                        <p>Life is about connection, and Eugene excels in creating dynamic, responsive websites that connect clients with the wants and needs of their customer base. Through his use of Wordsmithery, HTML5, CSS, Javascript, JQuery, AJAX, and PHP, Eugene can make your ideal web design a reality. Eugene believes that anything worth doing is worth doing right, and that designs should be effective, innovative, and sleek.</p>
                     </div>
                 </div>
                  </div>
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="col-md-12 text-center">
-                <input type="submit" class="btn btn-temp btn-send" value="Send message">
+                <input type="submit" class="btn btn-temp" value="Send message">
             </div>
         </div>
         <div class="row">
