--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
                     <h3>Follow me on social media!</h3>
                     <p id="social-links">
-                        <a href="http://www.facebook.com/eugenecodes/"><i class="fab fa-3x fa-facebook facebook-blue"></i></a>
-                        <a href="http://www.twitter.com/EDugan87"><i class="fab fa-3x fa-twitter-square twitter-blue"></i></a>
-                            <a href="http://www.github.com/EDugan87"><i class="fab fa-3x fa-github-square github-black"></i></a>
-                            <a href="https://www.linkedin.com/in/eugene-dugan-b7a8b4118/"><i class="fab fa-3x fa-linkedin linkedin-blue"></i></a>
+                        <a href="#"><i class="fab fa-3x fa-facebook facebook-blue"></i></a>
+                        <a href="#"><i class="fab fa-3x fa-twitter-square twitter-blue"></i></a>
+                            <a href="#"><i class="fab fa-3x fa-github-square github-black"></i></a>
+                            <a href="#"><i class="fab fa-3x fa-linkedin linkedin-blue"></i></a>
                     </p>
                     </div>
                     
